[package]
name = "wasm-module"
description = "my first example of a wasm module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wai-bindgen-rust = "0.2.3"

# Information for cargo wamp
[package.metadata.wapm]
namespace = "jf" # Replace this with your WAPM username, not use yet only do local export
abi = "none"
build = ""

[package.metadata.wapm.bindings]
wai-version = "0.2.0"
exports = "wasm-mod-exported.wai"
imports = ["host-exported.wai", "env.wai"]
